Working rotating and scaling features

--- a/src/ui/MainWindow.ui
+++ b/src/ui/MainWindow.ui
@@ -20,7 +20,11 @@
   <property name="unifiedTitleAndToolBarOnMac">
    <bool>false</bool>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <widget class="QWidget" name="centralwidget">
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+  </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
@@ -134,7 +138,7 @@
   </action>
   <action name="actionInvert_pixel_values">
    <property name="checkable">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="icon">
     <iconset resource="../Resource.qrc">
