--- a/src/ui/MainWindow.ui
+++ b/src/ui/MainWindow.ui
@@ -52,14 +52,16 @@
     <addaction name="separator"/>
     <addaction name="actionInvert_pixel_values"/>
    </widget>
-   <widget class="QMenu" name="menuAbout">
+   <widget class="QMenu" name="menuHelp">
     <property name="title">
-     <string>About</string>
+     <string>Help</string>
     </property>
+    <addaction name="actionAbout_Qt"/>
+    <addaction name="actionAbout_This_Software"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEffects"/>
-   <addaction name="menuAbout"/>
+   <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
@@ -146,6 +148,16 @@
    </property>
    <property name="text">
     <string>Invert pixel values</string>
+   </property>
+  </action>
+  <action name="actionAbout_Qt">
+   <property name="text">
+    <string>About Qt</string>
+   </property>
+  </action>
+  <action name="actionAbout_This_Software">
+   <property name="text">
+    <string>About This Software</string>
    </property>
   </action>
  </widget>
